# ai-hedge-fund

./: .gitignore  pyproject.toml  test.py  test2.py
src/: agents.py  backtester.py  main.py  tools.py
src/agents/: market_data.py  portfolio_manager.py  sentiment.py  valuation.py
src/tools/: api.py
